quick fix to timeline item spacing

--- a/app/components/transactions-list-item/transactions-list-item.component.less
+++ b/app/components/transactions-list-item/transactions-list-item.component.less
@@ -22,7 +22,7 @@
     left:7.5px;
     background-color: @masterBrandColor;
     &-first{
-      top: 50%;
+      top: 15px;
     }
   }
   .transactions-li-timeline-circle{
@@ -82,6 +82,7 @@
         font-size: 16px;
         min-height: 60px;
         width: 375px;
+        padding-bottom:10px;
         overflow: hidden;
         text-overflow: ellipsis;
         a:hover {
